--- a/Resume.html
+++ b/Resume.html
@@ -9,19 +9,20 @@
   <body>
     <div class="main">
       <div class="leftDiv">
-        <img src="images/vyshu.png" alt="exact image name">
+        <!-- <img src="images/vyshu.png" alt="exact image name">
         <h2>vyshu</h2>
         <h3>APSSDC</h3>
         <h5>1122334455</h5>
-        <h5>vaishu888246@gmail.com</h5>
+        <h5>vaishu888246@gmail.com</h5> -->
 
       </div>
 
 
         <div class="rightDiv">
-          <h1>career object</h1><hr>
-          <p>vyshu and sindhu are friends</p>
-          <h1>EDUCATIONAL INFORMATION</h1>
+          <!-- <h1>career object</h1><hr>
+          <p>To have my career in a progressive organization that gives a scope to apply my knowledge and Technical skills to work dynamically for the growth of organization."
+</p>-->
+          <!-- <h1>EDUCATIONAL INFORMATION</h1>
           <h3>B.tech</h3>
           <ul>
             <li>college:QIS</li>
@@ -40,11 +41,18 @@
             <li>school:vidyanikethan</li>
             <li>medium:telugu</li>
             <li>cgps:92</li>
+          </ul> -->
+          <!-- <h1>skills</h1>
+          <ul>
+            <li>java</li>
+            <li>c++</li>
           </ul>
-          <h1>skills</h1><hr>
+          <hr> -->
 
     </div>
     </div>
 
   </body>
+  <script type="text/javascript" src="resume.js">
+</script>
 </html>
